--- a/ML Group Project.ipynb
+++ b/ML Group Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "id": "4cc27294",
    "metadata": {},
    "outputs": [],
@@ -14,45 +14,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "id": "55ecfa0e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('listings summary.csv')"
+    "df = pd.read_csv('listings.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
+   "id": "ba532152",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.drop(['listing_url'], axis = 1, inplace = True)\n",
+    "df.drop(['scrape_id'], axis = 1, inplace = True)\n",
+    "df.drop(['last_scraped'], axis = 1, inplace = True)\n",
+    "df.drop(['name'], axis = 1, inplace = True)\n",
+    "df.drop(['description'], axis = 1, inplace = True)\n",
+    "df.drop(['neighborhood_overview'], axis = 1, inplace = True)\n",
+    "df.drop(['picture_url'], axis = 1, inplace = True)\n",
+    "df.drop(['host_url'], axis = 1, inplace = True)\n",
+    "df.drop(['host_name'], axis = 1, inplace = True)\n",
+    "df.drop(['host_since'], axis = 1, inplace = True)\n",
+    "df.drop(['host_about'], axis = 1, inplace = True)\n",
+    "df.drop(['host_thumbnail_url'], axis = 1, inplace = True)\n",
+    "df.drop(['host_picture_url'], axis = 1, inplace = True)\n",
+    "df.drop(['host_neighbourhood'], axis = 1, inplace = True)\n",
+    "df.drop(['neighbourhood'], axis = 1, inplace = True)\n",
+    "df.drop(['latitude'], axis = 1, inplace = True)\n",
+    "df.drop(['longitude'], axis = 1, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "25871a72",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "id                                  int64\n",
-       "name                               object\n",
-       "host_id                             int64\n",
-       "host_name                          object\n",
-       "neighbourhood_group                object\n",
-       "neighbourhood                      object\n",
-       "latitude                          float64\n",
-       "longitude                         float64\n",
-       "room_type                          object\n",
-       "price                               int64\n",
-       "minimum_nights                      int64\n",
-       "number_of_reviews                   int64\n",
-       "last_review                        object\n",
-       "reviews_per_month                 float64\n",
-       "calculated_host_listings_count      int64\n",
-       "availability_365                    int64\n",
-       "number_of_reviews_ltm               int64\n",
-       "license                            object\n",
+       "id                                                int64\n",
+       "host_id                                           int64\n",
+       "host_location                                    object\n",
+       "host_response_time                               object\n",
+       "host_response_rate                               object\n",
+       "host_acceptance_rate                             object\n",
+       "host_is_superhost                                object\n",
+       "host_listings_count                               int64\n",
+       "host_total_listings_count                         int64\n",
+       "host_verifications                               object\n",
+       "host_has_profile_pic                             object\n",
+       "host_identity_verified                           object\n",
+       "neighbourhood_cleansed                           object\n",
+       "neighbourhood_group_cleansed                     object\n",
+       "property_type                                    object\n",
+       "room_type                                        object\n",
+       "accommodates                                      int64\n",
+       "bathrooms                                       float64\n",
+       "bathrooms_text                                   object\n",
+       "bedrooms                                        float64\n",
+       "beds                                            float64\n",
+       "amenities                                        object\n",
+       "price                                            object\n",
+       "minimum_nights                                    int64\n",
+       "maximum_nights                                    int64\n",
+       "minimum_minimum_nights                          float64\n",
+       "maximum_minimum_nights                          float64\n",
+       "minimum_maximum_nights                          float64\n",
+       "maximum_maximum_nights                          float64\n",
+       "minimum_nights_avg_ntm                          float64\n",
+       "maximum_nights_avg_ntm                          float64\n",
+       "calendar_updated                                float64\n",
+       "has_availability                                 object\n",
+       "availability_30                                   int64\n",
+       "availability_60                                   int64\n",
+       "availability_90                                   int64\n",
+       "availability_365                                  int64\n",
+       "calendar_last_scraped                            object\n",
+       "number_of_reviews                                 int64\n",
+       "number_of_reviews_ltm                             int64\n",
+       "number_of_reviews_l30d                            int64\n",
+       "first_review                                     object\n",
+       "last_review                                      object\n",
+       "review_scores_rating                            float64\n",
+       "review_scores_accuracy                          float64\n",
+       "review_scores_cleanliness                       float64\n",
+       "review_scores_checkin                           float64\n",
+       "review_scores_communication                     float64\n",
+       "review_scores_location                          float64\n",
+       "review_scores_value                             float64\n",
+       "license                                          object\n",
+       "instant_bookable                                 object\n",
+       "calculated_host_listings_count                    int64\n",
+       "calculated_host_listings_count_entire_homes       int64\n",
+       "calculated_host_listings_count_private_rooms      int64\n",
+       "calculated_host_listings_count_shared_rooms       int64\n",
+       "reviews_per_month                               float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
