--- a/ML Group Project.ipynb
+++ b/ML Group Project.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('listings.csv')"
+    "df = pd.read_csv('nyc_listings.csv')"
    ]
   },
   {
@@ -71,8 +71,8 @@
        "host_response_rate                               object\n",
        "host_acceptance_rate                             object\n",
        "host_is_superhost                                object\n",
-       "host_listings_count                               int64\n",
-       "host_total_listings_count                         int64\n",
+       "host_listings_count                             float64\n",
+       "host_total_listings_count                       float64\n",
        "host_verifications                               object\n",
        "host_identity_verified                           object\n",
        "neighbourhood_cleansed                           object\n",
@@ -114,6 +114,7 @@
        "calculated_host_listings_count_private_rooms      int64\n",
        "calculated_host_listings_count_shared_rooms       int64\n",
        "reviews_per_month                               float64\n",
+       "Revenue 21                                      float64\n",
        "dtype: object"
       ]
      },
@@ -136,55 +137,56 @@
     {
      "data": {
       "text/plain": [
-       "id                                                0\n",
-       "host_id                                           0\n",
-       "host_response_time                              585\n",
-       "host_response_rate                              585\n",
-       "host_acceptance_rate                            533\n",
-       "host_is_superhost                                 0\n",
-       "host_listings_count                               0\n",
-       "host_total_listings_count                         0\n",
-       "host_verifications                                0\n",
-       "host_identity_verified                            0\n",
-       "neighbourhood_cleansed                            0\n",
-       "neighbourhood_group_cleansed                      0\n",
-       "property_type                                     0\n",
-       "room_type                                         0\n",
-       "accommodates                                      0\n",
-       "bathrooms_text                                    4\n",
-       "bedrooms                                        585\n",
-       "beds                                            121\n",
-       "amenities                                         0\n",
-       "price                                             0\n",
-       "minimum_nights                                    0\n",
-       "maximum_nights                                    0\n",
-       "minimum_minimum_nights                            3\n",
-       "maximum_minimum_nights                            3\n",
-       "minimum_maximum_nights                            3\n",
-       "maximum_maximum_nights                            3\n",
-       "minimum_nights_avg_ntm                            3\n",
-       "maximum_nights_avg_ntm                            3\n",
-       "has_availability                                  0\n",
-       "availability_30                                   0\n",
-       "availability_60                                   0\n",
-       "availability_90                                   0\n",
-       "availability_365                                  0\n",
-       "number_of_reviews                                 0\n",
-       "number_of_reviews_ltm                             0\n",
-       "number_of_reviews_l30d                            0\n",
-       "review_scores_rating                            652\n",
-       "review_scores_accuracy                          657\n",
-       "review_scores_cleanliness                       657\n",
-       "review_scores_checkin                           657\n",
-       "review_scores_communication                     657\n",
-       "review_scores_location                          657\n",
-       "review_scores_value                             657\n",
-       "instant_bookable                                  0\n",
-       "calculated_host_listings_count                    0\n",
-       "calculated_host_listings_count_entire_homes       0\n",
-       "calculated_host_listings_count_private_rooms      0\n",
-       "calculated_host_listings_count_shared_rooms       0\n",
-       "reviews_per_month                               652\n",
+       "id                                                  0\n",
+       "host_id                                             0\n",
+       "host_response_time                              15743\n",
+       "host_response_rate                              15743\n",
+       "host_acceptance_rate                            15102\n",
+       "host_is_superhost                                 111\n",
+       "host_listings_count                               111\n",
+       "host_total_listings_count                         111\n",
+       "host_verifications                                  0\n",
+       "host_identity_verified                            111\n",
+       "neighbourhood_cleansed                              0\n",
+       "neighbourhood_group_cleansed                        0\n",
+       "property_type                                       0\n",
+       "room_type                                           0\n",
+       "accommodates                                        0\n",
+       "bathrooms_text                                    105\n",
+       "bedrooms                                         3936\n",
+       "beds                                              611\n",
+       "amenities                                           0\n",
+       "price                                               0\n",
+       "minimum_nights                                      0\n",
+       "maximum_nights                                      0\n",
+       "minimum_minimum_nights                             17\n",
+       "maximum_minimum_nights                             17\n",
+       "minimum_maximum_nights                             17\n",
+       "maximum_maximum_nights                             17\n",
+       "minimum_nights_avg_ntm                             17\n",
+       "maximum_nights_avg_ntm                             17\n",
+       "has_availability                                    0\n",
+       "availability_30                                     0\n",
+       "availability_60                                     0\n",
+       "availability_90                                     0\n",
+       "availability_365                                    0\n",
+       "number_of_reviews                                   0\n",
+       "number_of_reviews_ltm                               0\n",
+       "number_of_reviews_l30d                              0\n",
+       "review_scores_rating                             9296\n",
+       "review_scores_accuracy                           9925\n",
+       "review_scores_cleanliness                        9914\n",
+       "review_scores_checkin                            9932\n",
+       "review_scores_communication                      9921\n",
+       "review_scores_location                           9936\n",
+       "review_scores_value                              9936\n",
+       "instant_bookable                                    0\n",
+       "calculated_host_listings_count                      0\n",
+       "calculated_host_listings_count_entire_homes         0\n",
+       "calculated_host_listings_count_private_rooms        0\n",
+       "calculated_host_listings_count_shared_rooms         0\n",
+       "reviews_per_month                                9296\n",
+       "Revenue 21                                       1071\n",
        "dtype: int64"
       ]
      },
