--- a/ML Group Project.ipynb
+++ b/ML Group Project.ipynb
@@ -25,6 +25,38 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "298c9a1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "listing_id                                        int64\n",
+       "listing_url                                      object\n",
+       "scrape_id                                       float64\n",
+       "last_scraped                                     object\n",
+       "name                                             object\n",
+       "                                                 ...   \n",
+       "calculated_host_listings_count                    int64\n",
+       "calculated_host_listings_count_entire_homes       int64\n",
+       "calculated_host_listings_count_private_rooms      int64\n",
+       "calculated_host_listings_count_shared_rooms       int64\n",
+       "reviews_per_month                               float64\n",
+       "Length: 74, dtype: object"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "ba532152",
    "metadata": {},
    "outputs": [],
@@ -33,7 +65,7 @@
     "df.drop(['scrape_id'], axis = 1, inplace = True)\n",
     "df.drop(['last_scraped'], axis = 1, inplace = True)\n",
     "df.drop(['name'], axis = 1, inplace = True)\n",
-    "df.drop(['description'], axis = 1, inplace = True)\n",
+    "df.drop(['description'], axis = 1, inplace = True) # don't have the resources/time/knowledge to extract anything from this\n",
     "df.drop(['neighborhood_overview'], axis = 1, inplace = True)\n",
     "df.drop(['picture_url'], axis = 1, inplace = True)\n",
     "df.drop(['host_url'], axis = 1, inplace = True)\n",
@@ -41,14 +73,20 @@
     "df.drop(['host_since'], axis = 1, inplace = True)\n",
     "df.drop(['host_location'], axis = 1, inplace = True)\n",
     "df.drop(['host_about'], axis = 1, inplace = True)\n",
+    "df.drop(['host_response_time'], axis = 1, inplace = True)\n",
+    "df.drop(['host_response_rate'], axis = 1, inplace = True)\n",
+    "df.drop(['host_acceptance_rate'], axis = 1, inplace = True)\n",
     "df.drop(['host_thumbnail_url'], axis = 1, inplace = True)\n",
     "df.drop(['host_picture_url'], axis = 1, inplace = True)\n",
     "df.drop(['host_neighbourhood'], axis = 1, inplace = True)\n",
-    "df.drop(['host_has_profile_pic'], axis = 1, inplace = True)\n",
     "df.drop(['neighbourhood'], axis = 1, inplace = True)\n",
     "df.drop(['latitude'], axis = 1, inplace = True)\n",
     "df.drop(['longitude'], axis = 1, inplace = True)\n",
-    "df.drop(['bathrooms'], axis = 1, inplace = True)\n",
+    "df.drop(['bathrooms'], axis = 1, inplace = True) # entire column missing\n",
+    "df.drop(['minimum_minimum_nights'], axis = 1, inplace = True)\n",
+    "df.drop(['maximum_minimum_nights'], axis = 1, inplace = True)\n",
+    "df.drop(['minimum_maximum_nights'], axis = 1, inplace = True)\n",
+    "df.drop(['maximum_maximum_nights'], axis = 1, inplace = True)\n",
     "df.drop(['calendar_updated'], axis = 1, inplace = True)\n",
     "df.drop(['calendar_last_scraped'], axis = 1, inplace = True)\n",
     "df.drop(['first_review'], axis = 1, inplace = True)\n",
@@ -58,22 +96,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "25871a72",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "id                                                int64\n",
+       "listing_id                                        int64\n",
        "host_id                                           int64\n",
-       "host_response_time                               object\n",
-       "host_response_rate                               object\n",
-       "host_acceptance_rate                             object\n",
        "host_is_superhost                                object\n",
        "host_listings_count                             float64\n",
        "host_total_listings_count                       float64\n",
        "host_verifications                               object\n",
+       "host_has_profile_pic                             object\n",
        "host_identity_verified                           object\n",
        "neighbourhood_cleansed                           object\n",
        "neighbourhood_group_cleansed                     object\n",
@@ -87,10 +123,6 @@
        "price                                            object\n",
        "minimum_nights                                    int64\n",
        "maximum_nights                                    int64\n",
-       "minimum_minimum_nights                          float64\n",
-       "maximum_minimum_nights                          float64\n",
-       "minimum_maximum_nights                          float64\n",
-       "maximum_maximum_nights                          float64\n",
        "minimum_nights_avg_ntm                          float64\n",
        "maximum_nights_avg_ntm                          float64\n",
        "has_availability                                 object\n",
@@ -114,11 +146,10 @@
        "calculated_host_listings_count_private_rooms      int64\n",
        "calculated_host_listings_count_shared_rooms       int64\n",
        "reviews_per_month                               float64\n",
-       "Revenue 21                                      float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,79 +161,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "5b28ab5e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "id                                                  0\n",
-       "host_id                                             0\n",
-       "host_response_time                              15743\n",
-       "host_response_rate                              15743\n",
-       "host_acceptance_rate                            15102\n",
-       "host_is_superhost                                 111\n",
-       "host_listings_count                               111\n",
-       "host_total_listings_count                         111\n",
-       "host_verifications                                  0\n",
-       "host_identity_verified                            111\n",
-       "neighbourhood_cleansed                              0\n",
-       "neighbourhood_group_cleansed                        0\n",
-       "property_type                                       0\n",
-       "room_type                                           0\n",
-       "accommodates                                        0\n",
-       "bathrooms_text                                    105\n",
-       "bedrooms                                         3936\n",
-       "beds                                              611\n",
-       "amenities                                           0\n",
-       "price                                               0\n",
-       "minimum_nights                                      0\n",
-       "maximum_nights                                      0\n",
-       "minimum_minimum_nights                             17\n",
-       "maximum_minimum_nights                             17\n",
-       "minimum_maximum_nights                             17\n",
-       "maximum_maximum_nights                             17\n",
-       "minimum_nights_avg_ntm                             17\n",
-       "maximum_nights_avg_ntm                             17\n",
-       "has_availability                                    0\n",
-       "availability_30                                     0\n",
-       "availability_60                                     0\n",
-       "availability_90                                     0\n",
-       "availability_365                                    0\n",
-       "number_of_reviews                                   0\n",
-       "number_of_reviews_ltm                               0\n",
-       "number_of_reviews_l30d                              0\n",
-       "review_scores_rating                             9296\n",
-       "review_scores_accuracy                           9925\n",
-       "review_scores_cleanliness                        9914\n",
-       "review_scores_checkin                            9932\n",
-       "review_scores_communication                      9921\n",
-       "review_scores_location                           9936\n",
-       "review_scores_value                              9936\n",
-       "instant_bookable                                    0\n",
-       "calculated_host_listings_count                      0\n",
-       "calculated_host_listings_count_entire_homes         0\n",
-       "calculated_host_listings_count_private_rooms        0\n",
-       "calculated_host_listings_count_shared_rooms         0\n",
-       "reviews_per_month                                9296\n",
-       "Revenue 21                                       1071\n",
+       "listing_id                                         0\n",
+       "host_id                                            0\n",
+       "host_is_superhost                                111\n",
+       "host_listings_count                              111\n",
+       "host_total_listings_count                        111\n",
+       "host_verifications                                 0\n",
+       "host_has_profile_pic                             111\n",
+       "host_identity_verified                           111\n",
+       "neighbourhood_cleansed                             0\n",
+       "neighbourhood_group_cleansed                       0\n",
+       "property_type                                      0\n",
+       "room_type                                          0\n",
+       "accommodates                                       0\n",
+       "bathrooms_text                                   105\n",
+       "bedrooms                                        3936\n",
+       "beds                                             611\n",
+       "amenities                                          0\n",
+       "price                                              0\n",
+       "minimum_nights                                     0\n",
+       "maximum_nights                                     0\n",
+       "minimum_nights_avg_ntm                            17\n",
+       "maximum_nights_avg_ntm                            17\n",
+       "has_availability                                   0\n",
+       "availability_30                                    0\n",
+       "availability_60                                    0\n",
+       "availability_90                                    0\n",
+       "availability_365                                   0\n",
+       "number_of_reviews                                  0\n",
+       "number_of_reviews_ltm                              0\n",
+       "number_of_reviews_l30d                             0\n",
+       "review_scores_rating                            9296\n",
+       "review_scores_accuracy                          9925\n",
+       "review_scores_cleanliness                       9914\n",
+       "review_scores_checkin                           9932\n",
+       "review_scores_communication                     9921\n",
+       "review_scores_location                          9936\n",
+       "review_scores_value                             9936\n",
+       "instant_bookable                                   0\n",
+       "calculated_host_listings_count                     0\n",
+       "calculated_host_listings_count_entire_homes        0\n",
+       "calculated_host_listings_count_private_rooms       0\n",
+       "calculated_host_listings_count_shared_rooms        0\n",
+       "reviews_per_month                               9296\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.isnull().sum()\n",
-    "# there is missing data! what do we do?!?"
+    "# there is missing data! what do we do?!?\n",
+    "# there is enought missing rows from host_response_time, host_response_rate, and host_acceptance_rate \n",
+    "# (greater than 15,000 rows) to warrant getting rid of these columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "6f672484",
    "metadata": {
     "scrolled": false
@@ -210,12 +236,15 @@
    "outputs": [],
    "source": [
     "df['has_availability'] = df['has_availability'].map({'t' : 1, 'f' : 0})\n",
-    "df['instant_bookable'] = df['instant_bookable'].map({'t' : 1, 'f' : 0})"
+    "df['instant_bookable'] = df['instant_bookable'].map({'t' : 1, 'f' : 0})\n",
+    "df['host_is_superhost'] = df['host_is_superhost'].map({'t' : 1, 'f' : 0})\n",
+    "df['price']=df['price'].str.replace(',','')\n",
+    "df['price'] = pd.to_numeric(df['price'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "a4efff71",
    "metadata": {
     "scrolled": true
@@ -224,15 +253,13 @@
     {
      "data": {
       "text/plain": [
-       "id                                                int64\n",
+       "listing_id                                        int64\n",
        "host_id                                           int64\n",
-       "host_response_time                               object\n",
-       "host_response_rate                               object\n",
-       "host_acceptance_rate                             object\n",
-       "host_is_superhost                                object\n",
-       "host_listings_count                               int64\n",
-       "host_total_listings_count                         int64\n",
+       "host_is_superhost                               float64\n",
+       "host_listings_count                             float64\n",
+       "host_total_listings_count                       float64\n",
        "host_verifications                               object\n",
+       "host_has_profile_pic                             object\n",
        "host_identity_verified                           object\n",
        "neighbourhood_cleansed                           object\n",
        "neighbourhood_group_cleansed                     object\n",
@@ -243,13 +270,9 @@
        "bedrooms                                        float64\n",
        "beds                                            float64\n",
        "amenities                                        object\n",
-       "price                                            object\n",
+       "price                                           float64\n",
        "minimum_nights                                    int64\n",
        "maximum_nights                                    int64\n",
-       "minimum_minimum_nights                          float64\n",
-       "maximum_minimum_nights                          float64\n",
-       "minimum_maximum_nights                          float64\n",
-       "maximum_maximum_nights                          float64\n",
        "minimum_nights_avg_ntm                          float64\n",
        "maximum_nights_avg_ntm                          float64\n",
        "has_availability                                  int64\n",
@@ -276,13 +299,39 @@
        "dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "920dadc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    150.00\n",
+       "1     76.00\n",
+       "2     60.00\n",
+       "3    275.00\n",
+       "4     68.00\n",
+       "Name: price, dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['price'].head()"
    ]
   },
   {
